--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -151,7 +151,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Emojis.exe"
+export_path="../../Desktop/Emoji Game /Builds/Emojis.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
