--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -46,7 +46,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Emoji Game /Builds/Emojis.dmg"
+export_path="../../Desktop/Emoji Game /Builds/Cackle Royale.dmg"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -59,7 +59,7 @@ binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
-application/icon=""
+application/icon="res://icon.svg"
 application/icon_interpolation=4
 application/bundle_identifier="com.emoji.game"
 application/signature=""
@@ -151,7 +151,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Emojis.exe"
+export_path="../../Desktop/Emoji Game /Builds/Cackle Royale.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -175,7 +175,7 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
+application/icon="res://icon.svg"
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
